src/flex/grammar.output
Terminals unused in grammar

    END
    OTHER


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: lines $end
    2     | $end

    3 lines: ε
    4      | lines line NEWLINE

    5 line: opt_seps
    6     | opt_seps opt_skip exprs opt_seps
    7     | error

    8 opt_skip: ε
    9         | '/'

   10 opt_seps: ε
   11         | seps

   12 seps: SEP
   13     | seps SEP

   14 exprs: expr
   15      | exprs seps expr

   16 $@1: ε

   17 expr: IF SEP bool_expr $@1 if_body ENDIF
   18     | CMD arith_expr
   19     | assignment
   20     | LABEL
   21     | GOTO SEP MISC_ID
   22     | REPEAT SEP MISC_ID SEP MISC_ID
   23     | SPECIAL_CMD
   24     | CALL SEP STRING
   25     | MISC_ID
   26     | fn
   27     | COMMENT

   28 if_body: ε
   29        | if_body if_element

   30 if_element: expr
   31           | SEP
   32           | NEWLINE

   33 assignment: CMD opt_seps '=' opt_seps arith_expr
   34           | VAR opt_seps '=' opt_seps arith_expr
   35           | CUSTOM_VAR opt_seps '=' opt_seps arith_expr
   36           | CUSTOM_VAR SEP arith_expr

   37 val: VAR
   38    | CUSTOM_VAR
   39    | INT
   40    | FLOAT

   41 fn: MISC_ID '(' params ')'

   42 params: ε
   43       | arith_expr
   44       | MISC_ID
   45       | params ',' arith_expr
   46       | params ',' MISC_ID

   47 arith_expr: val
   48           | fn
   49           | arith_expr '+' arith_expr
   50           | arith_expr '-' arith_expr
   51           | arith_expr '*' arith_expr
   52           | arith_expr '/' arith_expr
   53           | '(' arith_expr ')'
   54           | '-' arith_expr

   55 bool_expr: arith_expr '<' arith_expr
   56          | arith_expr '>' arith_expr
   57          | arith_expr '=' '=' arith_expr
   58          | arith_expr '!' '=' arith_expr
   59          | arith_expr '<' '=' arith_expr
   60          | arith_expr '>' '=' arith_expr
   61          | '!' bool_expr
   62          | '(' bool_expr ')'


Terminals, with rules where they appear

    $end (0) 0 1 2
    '!' (33) 58 61
    '(' (40) 41 53 62
    ')' (41) 41 53 62
    '*' (42) 51
    '+' (43) 49
    ',' (44) 45 46
    '-' (45) 50 54
    '/' (47) 9 52
    '<' (60) 55 59
    '=' (61) 33 34 35 57 58 59 60
    '>' (62) 56 60
    error (256) 7
    SEP (258) 12 13 17 21 22 24 31 36
    NEWLINE (259) 4 32
    END (260)
    OTHER (261)
    COMMENT (262) 27
    IF (263) 17
    ENDIF (264) 17
    GOTO (265) 21
    REPEAT (266) 22
    CALL (267) 24
    MISC_ID <char*> (268) 21 22 25 41 44 46
    LABEL <char*> (269) 20
    CMD <char*> (270) 18 33
    VAR <char*> (271) 34 37
    SPECIAL_CMD <char*> (272) 23
    CUSTOM_VAR <char*> (273) 35 36 38
    STRING <char*> (274) 24
    INT <int> (275) 39
    FLOAT <float> (276) 40


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    prog (34)
        on left: 1 2
        on right: 0
    lines (35)
        on left: 3 4
        on right: 1 4
    line (36)
        on left: 5 6 7
        on right: 4
    opt_skip (37)
        on left: 8 9
        on right: 6
    opt_seps (38)
        on left: 10 11
        on right: 5 6 33 34 35
    seps (39)
        on left: 12 13
        on right: 11 13 15
    exprs (40)
        on left: 14 15
        on right: 6 15
    expr (41)
        on left: 17 18 19 20 21 22 23 24 25 26 27
        on right: 14 15 30
    $@1 (42)
        on left: 16
        on right: 17
    if_body (43)
        on left: 28 29
        on right: 17 29
    if_element (44)
        on left: 30 31 32
        on right: 29
    assignment (45)
        on left: 33 34 35 36
        on right: 19
    val <float> (46)
        on left: 37 38 39 40
        on right: 47
    fn <float> (47)
        on left: 41
        on right: 26 48
    params (48)
        on left: 42 43 44 45 46
        on right: 41 45 46
    arith_expr <float> (49)
        on left: 47 48 49 50 51 52 53 54
        on right: 18 33 34 35 36 43 45 49 50 51 52 53 54 55 56 57 58 59 60
    bool_expr <int> (50)
        on left: 55 56 57 58 59 60 61 62
        on right: 17 61 62


State 0

    0 $accept: • prog $end

    $end  shift, and go to state 1

    $end      [reduce using rule 3 (lines)]
    $default  reduce using rule 3 (lines)

    prog   go to state 2
    lines  go to state 3


State 1

    2 prog: $end •

    $default  reduce using rule 2 (prog)


State 2

    0 $accept: prog • $end

    $end  shift, and go to state 4


State 3

    1 prog: lines • $end
    4 lines: lines • line NEWLINE

    $end   shift, and go to state 5
    error  shift, and go to state 6
    SEP    shift, and go to state 7

    NEWLINE      reduce using rule 10 (opt_seps)
    COMMENT      reduce using rule 10 (opt_seps)
    IF           reduce using rule 10 (opt_seps)
    GOTO         reduce using rule 10 (opt_seps)
    REPEAT       reduce using rule 10 (opt_seps)
    CALL         reduce using rule 10 (opt_seps)
    MISC_ID      reduce using rule 10 (opt_seps)
    LABEL        reduce using rule 10 (opt_seps)
    CMD          reduce using rule 10 (opt_seps)
    VAR          reduce using rule 10 (opt_seps)
    SPECIAL_CMD  reduce using rule 10 (opt_seps)
    CUSTOM_VAR   reduce using rule 10 (opt_seps)
    '/'          reduce using rule 10 (opt_seps)

    line      go to state 8
    opt_seps  go to state 9
    seps      go to state 10


State 4

    0 $accept: prog $end •

    $default  accept


State 5

    1 prog: lines $end •

    $default  reduce using rule 1 (prog)


State 6

    7 line: error •

    $default  reduce using rule 7 (line)


State 7

   12 seps: SEP •

    $default  reduce using rule 12 (seps)


State 8

    4 lines: lines line • NEWLINE

    NEWLINE  shift, and go to state 11


State 9

    5 line: opt_seps •
    6     | opt_seps • opt_skip exprs opt_seps

    '/'  shift, and go to state 12

    NEWLINE   reduce using rule 5 (line)
    $default  reduce using rule 8 (opt_skip)

    opt_skip  go to state 13


State 10

   11 opt_seps: seps •
   13 seps: seps • SEP

    SEP  shift, and go to state 14

    $default  reduce using rule 11 (opt_seps)


State 11

    4 lines: lines line NEWLINE •

    $default  reduce using rule 4 (lines)


State 12

    9 opt_skip: '/' •

    $default  reduce using rule 9 (opt_skip)


State 13

    6 line: opt_seps opt_skip • exprs opt_seps

    COMMENT      shift, and go to state 15
    IF           shift, and go to state 16
    GOTO         shift, and go to state 17
    REPEAT       shift, and go to state 18
    CALL         shift, and go to state 19
    MISC_ID      shift, and go to state 20
    LABEL        shift, and go to state 21
    CMD          shift, and go to state 22
    VAR          shift, and go to state 23
    SPECIAL_CMD  shift, and go to state 24
    CUSTOM_VAR   shift, and go to state 25

    exprs       go to state 26
    expr        go to state 27
    assignment  go to state 28
    fn          go to state 29


State 14

   13 seps: seps SEP •

    $default  reduce using rule 13 (seps)


State 15

   27 expr: COMMENT •

    $default  reduce using rule 27 (expr)


State 16

   17 expr: IF • SEP bool_expr $@1 if_body ENDIF

    SEP  shift, and go to state 30


State 17

   21 expr: GOTO • SEP MISC_ID

    SEP  shift, and go to state 31


State 18

   22 expr: REPEAT • SEP MISC_ID SEP MISC_ID

    SEP  shift, and go to state 32


State 19

   24 expr: CALL • SEP STRING

    SEP  shift, and go to state 33


State 20

   25 expr: MISC_ID •
   41 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 34

    $default  reduce using rule 25 (expr)


State 21

   20 expr: LABEL •

    $default  reduce using rule 20 (expr)


State 22

   18 expr: CMD • arith_expr
   33 assignment: CMD • opt_seps '=' opt_seps arith_expr

    SEP         shift, and go to state 7
    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    $default  reduce using rule 10 (opt_seps)

    opt_seps    go to state 42
    seps        go to state 10
    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 45


State 23

   34 assignment: VAR • opt_seps '=' opt_seps arith_expr

    SEP  shift, and go to state 7

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 46
    seps      go to state 10


State 24

   23 expr: SPECIAL_CMD •

    $default  reduce using rule 23 (expr)


State 25

   35 assignment: CUSTOM_VAR • opt_seps '=' opt_seps arith_expr
   36           | CUSTOM_VAR • SEP arith_expr

    SEP  shift, and go to state 47

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 48
    seps      go to state 10


State 26

    6 line: opt_seps opt_skip exprs • opt_seps
   15 exprs: exprs • seps expr

    SEP  shift, and go to state 7

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 49
    seps      go to state 50


State 27

   14 exprs: expr •

    $default  reduce using rule 14 (exprs)


State 28

   19 expr: assignment •

    $default  reduce using rule 19 (expr)


State 29

   26 expr: fn •

    $default  reduce using rule 26 (expr)


State 30

   17 expr: IF SEP • bool_expr $@1 if_body ENDIF

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 51
    '!'         shift, and go to state 52

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 53
    bool_expr   go to state 54


State 31

   21 expr: GOTO SEP • MISC_ID

    MISC_ID  shift, and go to state 55


State 32

   22 expr: REPEAT SEP • MISC_ID SEP MISC_ID

    MISC_ID  shift, and go to state 56


State 33

   24 expr: CALL SEP • STRING

    STRING  shift, and go to state 57


State 34

   41 fn: MISC_ID '(' • params ')'

    MISC_ID     shift, and go to state 58
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    $default  reduce using rule 42 (params)

    val         go to state 43
    fn          go to state 44
    params      go to state 59
    arith_expr  go to state 60


State 35

   41 fn: MISC_ID • '(' params ')'

    '('  shift, and go to state 34


State 36

   37 val: VAR •

    $default  reduce using rule 37 (val)


State 37

   38 val: CUSTOM_VAR •

    $default  reduce using rule 38 (val)


State 38

   39 val: INT •

    $default  reduce using rule 39 (val)


State 39

   40 val: FLOAT •

    $default  reduce using rule 40 (val)


State 40

   54 arith_expr: '-' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 61


State 41

   53 arith_expr: '(' • arith_expr ')'

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 62


State 42

   33 assignment: CMD opt_seps • '=' opt_seps arith_expr

    '='  shift, and go to state 63


State 43

   47 arith_expr: val •

    $default  reduce using rule 47 (arith_expr)


State 44

   48 arith_expr: fn •

    $default  reduce using rule 48 (arith_expr)


State 45

   18 expr: CMD arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 18 (expr)


State 46

   34 assignment: VAR opt_seps • '=' opt_seps arith_expr

    '='  shift, and go to state 68


State 47

   12 seps: SEP •
   36 assignment: CUSTOM_VAR SEP • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    $default  reduce using rule 12 (seps)

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 69


State 48

   35 assignment: CUSTOM_VAR opt_seps • '=' opt_seps arith_expr

    '='  shift, and go to state 70


State 49

    6 line: opt_seps opt_skip exprs opt_seps •

    $default  reduce using rule 6 (line)


State 50

   11 opt_seps: seps •
   13 seps: seps • SEP
   15 exprs: exprs seps • expr

    SEP          shift, and go to state 14
    COMMENT      shift, and go to state 15
    IF           shift, and go to state 16
    GOTO         shift, and go to state 17
    REPEAT       shift, and go to state 18
    CALL         shift, and go to state 19
    MISC_ID      shift, and go to state 20
    LABEL        shift, and go to state 21
    CMD          shift, and go to state 22
    VAR          shift, and go to state 23
    SPECIAL_CMD  shift, and go to state 24
    CUSTOM_VAR   shift, and go to state 25

    $default  reduce using rule 11 (opt_seps)

    expr        go to state 71
    assignment  go to state 28
    fn          go to state 29


State 51

   53 arith_expr: '(' • arith_expr ')'
   62 bool_expr: '(' • bool_expr ')'

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 51
    '!'         shift, and go to state 52

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 72
    bool_expr   go to state 73


State 52

   61 bool_expr: '!' • bool_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 51
    '!'         shift, and go to state 52

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 53
    bool_expr   go to state 74


State 53

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   55 bool_expr: arith_expr • '<' arith_expr
   56          | arith_expr • '>' arith_expr
   57          | arith_expr • '=' '=' arith_expr
   58          | arith_expr • '!' '=' arith_expr
   59          | arith_expr • '<' '=' arith_expr
   60          | arith_expr • '>' '=' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '='  shift, and go to state 75
    '<'  shift, and go to state 76
    '>'  shift, and go to state 77
    '!'  shift, and go to state 78


State 54

   17 expr: IF SEP bool_expr • $@1 if_body ENDIF

    $default  reduce using rule 16 ($@1)

    $@1  go to state 79


State 55

   21 expr: GOTO SEP MISC_ID •

    $default  reduce using rule 21 (expr)


State 56

   22 expr: REPEAT SEP MISC_ID • SEP MISC_ID

    SEP  shift, and go to state 80


State 57

   24 expr: CALL SEP STRING •

    $default  reduce using rule 24 (expr)


State 58

   41 fn: MISC_ID • '(' params ')'
   44 params: MISC_ID •

    '('  shift, and go to state 34

    $default  reduce using rule 44 (params)


State 59

   41 fn: MISC_ID '(' params • ')'
   45 params: params • ',' arith_expr
   46       | params • ',' MISC_ID

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


State 60

   43 params: arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 43 (params)


State 61

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   54           | '-' arith_expr •

    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 54 (arith_expr)


State 62

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   53           | '(' arith_expr • ')'

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    ')'  shift, and go to state 83


State 63

   33 assignment: CMD opt_seps '=' • opt_seps arith_expr

    SEP  shift, and go to state 7

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 84
    seps      go to state 10


State 64

   49 arith_expr: arith_expr '+' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 85


State 65

   50 arith_expr: arith_expr '-' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 86


State 66

   51 arith_expr: arith_expr '*' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 87


State 67

   52 arith_expr: arith_expr '/' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 88


State 68

   34 assignment: VAR opt_seps '=' • opt_seps arith_expr

    SEP  shift, and go to state 7

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 89
    seps      go to state 10


State 69

   36 assignment: CUSTOM_VAR SEP arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 36 (assignment)


State 70

   35 assignment: CUSTOM_VAR opt_seps '=' • opt_seps arith_expr

    SEP  shift, and go to state 7

    $default  reduce using rule 10 (opt_seps)

    opt_seps  go to state 90
    seps      go to state 10


State 71

   15 exprs: exprs seps expr •

    $default  reduce using rule 15 (exprs)


State 72

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   53           | '(' arith_expr • ')'
   55 bool_expr: arith_expr • '<' arith_expr
   56          | arith_expr • '>' arith_expr
   57          | arith_expr • '=' '=' arith_expr
   58          | arith_expr • '!' '=' arith_expr
   59          | arith_expr • '<' '=' arith_expr
   60          | arith_expr • '>' '=' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '='  shift, and go to state 75
    ')'  shift, and go to state 83
    '<'  shift, and go to state 76
    '>'  shift, and go to state 77
    '!'  shift, and go to state 78


State 73

   62 bool_expr: '(' bool_expr • ')'

    ')'  shift, and go to state 91


State 74

   61 bool_expr: '!' bool_expr •

    $default  reduce using rule 61 (bool_expr)


State 75

   57 bool_expr: arith_expr '=' • '=' arith_expr

    '='  shift, and go to state 92


State 76

   55 bool_expr: arith_expr '<' • arith_expr
   59          | arith_expr '<' • '=' arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '='         shift, and go to state 93
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 94


State 77

   56 bool_expr: arith_expr '>' • arith_expr
   60          | arith_expr '>' • '=' arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '='         shift, and go to state 95
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 96


State 78

   58 bool_expr: arith_expr '!' • '=' arith_expr

    '='  shift, and go to state 97


State 79

   17 expr: IF SEP bool_expr $@1 • if_body ENDIF

    $default  reduce using rule 28 (if_body)

    if_body  go to state 98


State 80

   22 expr: REPEAT SEP MISC_ID SEP • MISC_ID

    MISC_ID  shift, and go to state 99


State 81

   41 fn: MISC_ID '(' params ')' •

    $default  reduce using rule 41 (fn)


State 82

   45 params: params ',' • arith_expr
   46       | params ',' • MISC_ID

    MISC_ID     shift, and go to state 100
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 101


State 83

   53 arith_expr: '(' arith_expr ')' •

    $default  reduce using rule 53 (arith_expr)


State 84

   33 assignment: CMD opt_seps '=' opt_seps • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 102


State 85

   49 arith_expr: arith_expr • '+' arith_expr
   49           | arith_expr '+' arith_expr •
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 49 (arith_expr)


State 86

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   50           | arith_expr '-' arith_expr •
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 50 (arith_expr)


State 87

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   51           | arith_expr '*' arith_expr •
   52           | arith_expr • '/' arith_expr

    $default  reduce using rule 51 (arith_expr)


State 88

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   52           | arith_expr '/' arith_expr •

    $default  reduce using rule 52 (arith_expr)


State 89

   34 assignment: VAR opt_seps '=' opt_seps • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 103


State 90

   35 assignment: CUSTOM_VAR opt_seps '=' opt_seps • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 104


State 91

   62 bool_expr: '(' bool_expr ')' •

    $default  reduce using rule 62 (bool_expr)


State 92

   57 bool_expr: arith_expr '=' '=' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 105


State 93

   59 bool_expr: arith_expr '<' '=' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 106


State 94

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   55 bool_expr: arith_expr '<' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 55 (bool_expr)


State 95

   60 bool_expr: arith_expr '>' '=' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 107


State 96

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   56 bool_expr: arith_expr '>' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 56 (bool_expr)


State 97

   58 bool_expr: arith_expr '!' '=' • arith_expr

    MISC_ID     shift, and go to state 35
    VAR         shift, and go to state 36
    CUSTOM_VAR  shift, and go to state 37
    INT         shift, and go to state 38
    FLOAT       shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41

    val         go to state 43
    fn          go to state 44
    arith_expr  go to state 108


State 98

   17 expr: IF SEP bool_expr $@1 if_body • ENDIF
   29 if_body: if_body • if_element

    SEP          shift, and go to state 109
    NEWLINE      shift, and go to state 110
    COMMENT      shift, and go to state 15
    IF           shift, and go to state 16
    ENDIF        shift, and go to state 111
    GOTO         shift, and go to state 17
    REPEAT       shift, and go to state 18
    CALL         shift, and go to state 19
    MISC_ID      shift, and go to state 20
    LABEL        shift, and go to state 21
    CMD          shift, and go to state 22
    VAR          shift, and go to state 23
    SPECIAL_CMD  shift, and go to state 24
    CUSTOM_VAR   shift, and go to state 25

    expr        go to state 112
    if_element  go to state 113
    assignment  go to state 28
    fn          go to state 29


State 99

   22 expr: REPEAT SEP MISC_ID SEP MISC_ID •

    $default  reduce using rule 22 (expr)


State 100

   41 fn: MISC_ID • '(' params ')'
   46 params: params ',' MISC_ID •

    '('  shift, and go to state 34

    $default  reduce using rule 46 (params)


State 101

   45 params: params ',' arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 45 (params)


State 102

   33 assignment: CMD opt_seps '=' opt_seps arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 33 (assignment)


State 103

   34 assignment: VAR opt_seps '=' opt_seps arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 34 (assignment)


State 104

   35 assignment: CUSTOM_VAR opt_seps '=' opt_seps arith_expr •
   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 35 (assignment)


State 105

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   57 bool_expr: arith_expr '=' '=' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 57 (bool_expr)


State 106

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   59 bool_expr: arith_expr '<' '=' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 59 (bool_expr)


State 107

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   60 bool_expr: arith_expr '>' '=' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 60 (bool_expr)


State 108

   49 arith_expr: arith_expr • '+' arith_expr
   50           | arith_expr • '-' arith_expr
   51           | arith_expr • '*' arith_expr
   52           | arith_expr • '/' arith_expr
   58 bool_expr: arith_expr '!' '=' arith_expr •

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 58 (bool_expr)


State 109

   31 if_element: SEP •

    $default  reduce using rule 31 (if_element)


State 110

   32 if_element: NEWLINE •

    $default  reduce using rule 32 (if_element)


State 111

   17 expr: IF SEP bool_expr $@1 if_body ENDIF •

    $default  reduce using rule 17 (expr)


State 112

   30 if_element: expr •

    $default  reduce using rule 30 (if_element)


State 113

   29 if_body: if_body if_element •

    $default  reduce using rule 29 (if_body)
